syntax = "proto3";

option csharp_namespace = "PortfolioMicroService";

package order_validation;

message OrderValidationEvent {
  
  string order_id = 1;
  
  bool valid = 2;
  
}
